RESOLVED FIXED81148
Opening a URL in a MediaDocument does not propagate MIME type info to media element
https://bugs.webkit.org/show_bug.cgi?id=81148
Summary Opening a URL in a MediaDocument does not propagate MIME type info to media e...
Jer Noble
Reported 2012-03-14 13:03:02 PDT
Opening a URL in a MediaDocument does not propagate MIME type info to media element
Attachments
Patch (4.72 KB, patch)
2012-03-14 13:06 PDT, Jer Noble
eric.carlson: review+
Jer Noble
Comment 1 2012-03-14 13:03:28 PDT
Jer Noble
Comment 2 2012-03-14 13:06:04 PDT
Jer Noble
Comment 3 2012-03-14 14:34:46 PDT
Note You need to log in before you can comment on or make changes to this bug.