Opening a URL in a MediaDocument does not propagate MIME type info to media element https://bugs.webkit.org/show_bug.cgi?id=81148

Reviewed by Eric Carlson.

Source/WebCore:

Test: http/tests/media/media-document.html

Pass through the mime type from the DocumentLoader into the <source type=""> attribute of the
generated video element.

* html/MediaDocument.cpp:
(WebCore::MediaDocumentParser::createDocumentStructure):

LayoutTests:

* http/tests/media/media-document-expected.txt: Added.
* http/tests/media/media-document.html: Added.

git-svn-id: svn://svn.chromium.org/blink/trunk@110754 bbb929c8-8fbe-4397-9dbb-9b2b20218538